# mangan

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: Buffer.h  ElementBuffer.h  Shader.h  Vao.h
core/src/: Buffer.cpp  ElementBuffer.cpp  Shader.cpp  Vao.cpp
dependencies/stb/: CMakeLists.txt
examples/: CMakeLists.txt
examples/BYO2DGE/: CMakeLists.txt
examples/BYO2DGE/example_02_06/: CMakeLists.txt  Core.h  SimpleShader.h  Square.h  example_02_06.cpp  main.cpp
examples/BYO2DGE/example_03_01/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_03_02/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_03_03/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_03_04/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_03_05/: CMakeLists.txt  Renderable.h  Square.h  example_03_05.cpp  main.cpp
examples/BYO2DGE/example_04_01/: CMakeLists.txt  SimpleShader.h  example_04_01.cpp  main.cpp
examples/BYO2DGE/example_04_02/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_04_04/: CMakeLists.txt  Engine.h  ShaderResources.h  example_04_04.cpp  main.cpp  scene.json
examples/BYO2DGE/example_04_05/: CMakeLists.txt  example_04_05.cpp  main.cpp
examples/BYO2DGE/example_04_06/: CMakeLists.txt  main.cpp
examples/BYO2DGE/example_05_01/: CMakeLists.txt  Camera.h  Engine.h  Renderable.h  SceneFileParser.h  SimpleShader.h  SquareGeometryBuffer.h  Transform.h  example_05_01.cpp  main.cpp
examples/BYO2DGE/example_05_02/: CMakeLists.txt  example_05_02.cpp  main.cpp
examples/BYO2DGE/example_05_03/: CMakeLists.txt  example_05_03.cpp  main.cpp
examples/BYO2DGE/example_05_04/: CMakeLists.txt  example_05_04.cpp  main.cpp
examples/BYO2DGE/example_06_01/: CMakeLists.txt  example_06_01.cpp  main.cpp
examples/BYO2DGE/example_06_02/: CMakeLists.txt  example_06_02.cpp
examples/BYO2DGE/example_06_03/: CMakeLists.txt  example_06_03.cpp  main.cpp
examples/BYO2DGE/example_06_04/: example_06_04_not_complete.cpp
examples/BYO2DGE/example_07_01/: example_07_01.cpp
examples/BYO2DGE/example_07_02/: example_07_02.cpp
examples/BYO2DGE/example_07_03/: example_07_03.cpp
examples/BYO2DGE/example_07_04/: example_07_04.cpp
examples/BYO2DGE/example_07_05/: example_07_05.cpp
examples/BYO2DGE/example_08_01/: example_08_01_not_completed.cpp
examples/DGF/: CMakeLists.txt  temp.cpp
examples/DGF/Chapter2/: CMakeLists.txt  e01_empty.cpp  e02_point.cpp  e03_shape.cpp  e04_shape.cpp  e05_shape.cpp  e06_shape.cpp  e07_shape.cpp  e08_shape.cpp  e09_shape.cpp  test_2_01.cpp  test_2_02.cpp  test_2_03.cpp  test_2_04.cpp  test_2_05.cpp  test_2_06.cpp  test_2_07.cpp  test_2_08.cpp  test_2_09.cpp  test_2_10.cpp  test_2_11.cpp
examples/DGF/Chapter3/: CMakeLists.txt  e01_triangle.cpp  test_3_02.cpp
examples/DGF/Chapter4/: CMakeLists.txt  e01_shape.cpp  e02_shape.cpp  e03_shape.cpp  e04_shape.cpp  e05_shape.cpp  e06_shape.cpp  test_4_01.cpp  test_4_02.cpp  test_4_03.cpp  test_4_04.cpp  test_4_05.cpp  test_4_06.cpp  test_4_07.cpp
examples/DGF/Chapter5/: CMakeLists.txt  test_01.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_09.cpp  test_5_01.cpp  test_5_02.cpp  test_5_03.cpp  test_5_04.cpp  test_5_05.cpp  test_5_06.cpp  test_5_08.cpp  test_5_09.cpp  test_5_10.cpp  test_5_11.cpp  test_5_12.cpp  test_e07.cpp  test_e08.cpp
examples/DGF/Chapter6/: CMakeLists.txt  test_6_01.cpp  test_6_02.cpp  test_6_03.cpp  test_6_04.cpp  test_6_05.cpp
examples/DGF/core/: BasicMaterial.h  Camera.h  Geometry.h  Group.h  LineMaterial.h  Material.h  Mesh.h  Object3D.h  PointMaterial.h  RectangleGeometry.h  RenderSetting.h  Renderer.h  Scene.h  SurfaceMaterial.h  attribute.cpp  attribute.h  base.cpp  base.h  input.cpp  input.h  openGLUtils.cpp  openGLUtils.h  uniform.cpp  uniform.h
examples/DGF/examples/: example201.cpp  example202.cpp  example203.cpp  example204.cpp  example205.cpp  example206.cpp  example207.cpp  example208.cpp  example209.cpp
examples/JoeyDeVries/: CMakeLists.txt  example_01.cpp
examples/JoeyDeVries/Chapter1/: CMakeLists.txt  ex-2-1-triangle-refactored.cpp  ex-2-1-triangle.cpp  ex-2-2-triangle-indexed-refactored.cpp  (+28 more)
examples/My/: CMakeLists.txt
examples/temp/: CMakeLists.txt  e01_shape.cpp  glfw_example.cpp  main.cpp  notes.cpp
mngl/: CMakeLists.txt  ReadMe.txt
mngl/core/: Ebo.h  Shader.h  Texture.h  TextureCubeMap.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h
mngl/geometry/: Box.cpp  Cylinder.cpp  Cylinder.h  Ellipsoid.cpp  Geometry.cpp  Hierarchy.txt  Plane.h  Prism.cpp  Pyramid.h  Sphere.h
mngl/graphics/: Attribute.h  Buffer.cpp  Buffer.h  Connection.cpp  Connection.h  Mesh.cpp  Mesh.h  ShaderInfo.h  ShaderLoader.cpp  ShaderLoader.h  Uniform.cpp  Uniform.h
mngl/math/: v2d.h
mngl/shader/: basic_lighting.fs  lighting_maps.fs
mngl/src/: Attribute.h  Camera.h  Input.cpp  Input.h  Mesh.h  Object3D.h  RenderSetting.h  Renderer.h  Run.h  Shader.cpp  Shader.h  Texture.h  Uniform.h  Util.cpp  Util.h  VBO.h  Window.cpp  Window.h
mngl/test/: MathTest.cpp  RefCntTest.cpp
mngl/window/: Input.cpp  Run.h  Window.cpp  Window.h
mnlib/: CMakeLists.txt
mnlib/comp4300_engine/: Engine.h
mnlib/engine/: Input.cpp  Input.h  InputCodes.h  Run.h  Window.cpp  Window.h
mnlib/geometry/: Box.cpp  Box.h  Cone.cpp  Cone.h  Cylindrical.cpp  Cylindrical.h  Ellipsoid.h  Geometry.h  Hexagon.cpp  Hexagon.h  Hierarchy.txt  Icosahedron.cpp  Icosahedron.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Prism.h  Pyramid.cpp  Rectangle.cpp  Rectangle.h  Sphere.cpp  Surface.cpp  Surface.h
mnlib/graphics/: Attribute.cpp  Attribute.h  Buffer.cpp  Buffer.h  Connection.cpp  Connection.h  Ebo.cpp  Ebo.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ReadMe.txt  RenderSettings.cpp  RenderSettings.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h  Texture.cpp  Texture.h  TextureCubeMap.cpp  Uniform.cpp  Uniform.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  VboInfo.cpp  VboInfo.h
mnlib/material/: BasicLighting.cpp  BasicLighting.h  BasicMvpColor.cpp  BasicMvpColor.h  Material.cpp  Material.h
mnlib/shader/: lighting_maps.vs
old/: CMakeLists.txt
old/mngl/: CMakeLists.txt
(+810 files in other folders)
