#add_subdirectory(triangle)
#add_subdirectory(mandelbrot)
#add_subdirectory(gasket)
#add_subdirectory(colored_square)
#add_subdirectory(scratchpad)
#add_subdirectory(show_model)
#add_subdirectory(ads_model)
#add_subdirectory(random_walk)
#add_subdirectory(freetype_test)
#add_subdirectory(tetris)
#add_subdirectory(moving_in_plane)
#add_subdirectory(moving_on_sphere)
add_subdirectory(temp)
#add_subdirectory(DGF)
